welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:3: error: Int does not take parameters
  for (i <- 0 to (nums.length())){
                             ^