welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
  var nbOcc = 0
  for (i <- 0 to nums.length()){
    nbOcc = nbOcc + 1
  }
  return nbOcc
}